--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NeoWorker est une solution digitale d’externalisation des activités administratives et opérationnelles de l’entreprise. 1. Briefing : On prend le temps de vous connaître; 2. Matching : notre moteur de matching trouve le freelance qu’il vous faut parmi une communauté de freelances sélectionnés par nos soins; 3. Gestion des missions et de la facturation, facturation au réel, pas d’abonnement, pas d’engagement."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
